--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,12 +2,18 @@
 @import 'utilities.css';
 
 form {
+  max-width: 400px;
   padding: 1.8rem 0;
-  margin: 0 1rem;
+  margin: 0 auto;
 }
 
 form .form-control {
   margin-bottom: 1rem;
+}
+
+form label {
+  display: block;
+  padding-bottom: 0.4rem;
 }
 
 form input,
