--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -8,7 +8,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1rem;
   line-height: 1.2;
-  color: #333;
+  color: #f4f4f4;
+  background: #172554;
 }
 
 h1,
@@ -20,7 +21,86 @@ h4 {
   padding: 2rem 0;
 }
 
+table {
+  width: 900px;
+  background: #f4f4f4;
+  color: #333;
+  border-collapse: collapse;
+  border: solid 1px #f4f4f4;
+}
+
+table thead {
+  background: #172554;
+  color: #f4f4f4;
+  text-align: left;
+}
+
+table th {
+  padding: 1rem 0.4rem;
+  font-weight: 100;
+  text-align: left;
+}
+
+table tr {
+  cursor: pointer;
+}
+
+table td {
+  padding: 0.3rem 0.4rem;
+  border-top: solid 1px #172554;
+}
+
+table tr:first-child {
+  border-top: none;
+}
+
 .container {
-  max-width: 700px;
+  max-width: 80%;
   margin: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 1.1rem;
+  line-height: 1.3;
+  border: solid 1px #f4f4f4;
+  border-radius: 10px;
+  background-color: #3b82f6;
+  color: #141313;
+  max-width: 30rem;
+  width: 100%;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.5);
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal-container {
+  margin: 2rem;
+}
+
+.close-modal {
+  position: absolute;
+  top: 0;
+  right: 6px;
+  font-size: 2rem;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
 }
